Fixed collapsable button for unscoped pages

--- a/packages/commonwealth/client/styles/components/sidebar/index.scss
+++ b/packages/commonwealth/client/styles/components/sidebar/index.scss
@@ -105,17 +105,33 @@
   }
 }
 
-.expand-sidebar {
-  padding: 16px;
-  background: $neutral-50;
-  border-right: 1px solid $neutral-200;
+.rotating-button {
+  position: absolute;
+  left: 16px;
+  top: 65px;
+  z-index: 5;
 }
 
-.rotate {
+// This is an invisible box that allows us to hover over it in order to make the collapsable button visible
+.rotating-button-hover {
+  position: fixed;
+  height: 100vh;
+  width: 57px;
+  overflow: hidden;
+  z-index: 5;
+}
+
+.un-collapse {
   transform: rotate(-180deg);
   transition: 0.2s linear;
+  opacity: 0;
 }
-.un-rotate {
+
+.collapse {
   transform: rotate(0deg);
   transition: 0.2s linear;
+}
+
+.rotating-button-hover:hover .un-collapse {
+  opacity: 1;
 }
